--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,7 @@
             "name": "Arhinful Emmanuel",
             "email": "kofibusy@gmail.com"
         }
-    ]
+    ],
+    "minimum-stability": "dev",
+    "prefer-stable" : true
 }
